--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="container p-4 position-relative" *ngIf="estadoJuego == 2">
             <div class="divTerminar">
-                <button (click)="finalizar()"> Terminar </button>
+                <button (click)="finalizarFront()"> Terminar </button>
             </div>
             <div class="row justify-content-center">
                 <div class="col-1 topDiv m-1 p-2">
