--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -174,7 +174,7 @@ span.count.fontSi{
       font-size: 12px;
   }
     .juego{
-      scale: .8;
+      scale: .99;
     }
     .divCuadro{
       width: 144px;
@@ -199,7 +199,7 @@ span.count.fontSi{
       padding-top: 2px !important;
     }
     .divTerminar{
-      top: 45px;
+      top: 55px;
     }
     .col-1{
       width: 20%;
@@ -219,12 +219,25 @@ span.count.fontSi{
     }
     .divCuadro{
       margin: auto;
+      margin-bottom: 5px !important;
+    }
+    .mejor{
+      top: -17px;
+      position: relative;
+    }
+    .pb-4{
+      padding-bottom: 0px !important;
     }
     .col-3{
       width: 69%;
     }
     .p-5{
       padding: 1rem !important;
+    }
+    div.container.p-4.position-relative{
+      padding-top: 43px !important;
+      padding-left: 0px !important;
+      padding-right: 0px !important;
     }
     .fullBackground{
       background-image: url(../../assets/img/mc-afe8242971e91c5b39caed2300eb69c5.png);
